<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 Invictrix ROM

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
        <string name="main_settings_title">Armory</string>

        <string name="buttons_settings_title">Buttons</string>
        <string name="lights_settings_title">Lights</string>
        <string name="armory_lockscreen_settings_title">Lock Screen</string>
        <string name="misc_settings_title">Miscellaneous</string>
        <string name="navigationbar_settings_title">Navigation Bar</string>
        <string name="qs_settings_title">Quick Settings</string>
        <string name="recents_settings_title">Recents</string>
        <string name="statusbar_settings_title">Status Bar</string>

	<string name="lockscreen_shortcuts_title">Lock Screen Shortcuts</string>
	<string name="navbar_tuner_title">Navigation Bar Tuner</string>
	<string name="statusbar_icons_title">Status Bar Icons</string>

	<string name="statusbar_dt2s_title">Double Tap To Sleep</string>
	<string name="statusbar_dt2s_summary">Double tap on the status bar to sleep</string>

	<string name="keyguard_torch_title">Lock Screen Torch</string>
	<string name="keyguard_torch_summary">Press and hold the power button on the lock screen to toggle the flashlight</string>

	<string name="dt2s_lockscreen_title">Double Tap To Sleep</string>
	<string name="dt2s_lockscreen_summary">Double tap on the lock screen to sleep</string>

	<string name="pixel_navbar_animation">Pixel Navbar Animation</string>

	<string name="swap_volume_buttons_title">Swap Volume Buttons</string>
	<string name="swap_volume_buttons_summary">Swap volume buttons while rotated</string>

	<string name="device_extras_title">Device extras</string>
	<string name="device extras_summary">Device specific Tweaks</string>
	
	<string name="volume_media_title">Contol Media Volume</string>
	<string name="volume_media_summary">Default to controlling media volume with buttons</string>

	<string name="music_control_title">Music Control</string>
	<string name="music_control_summary">When the screen is off, long press the volume buttons to skip music tracks</string>

	<string name="headset_title">Launch music player when</string>

	<string-array name="headset_names">
		<item>Never</item>
		<item>Connected to wired headset</item>
		<item>Connected to bluetooth but not Android Auto</item>
		<item>Connected to bluetooth</item>
		<item>Connected to anything but Android Auto</item>
		<item>Connected to anything</item>
	</string-array>

	<string-array name="headset_values">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
	</string-array>

	<string name="lockscreen_media_title">Lock Screen Media</string>
	<string name="lockscreen_media_summary">Show media info on the lockscreen</string>

	<string name="statusbar_quick_pulldown_title">Quick Pulldown</string>
	<string name="statusbar_quick_pulldown_summary">Pull down on the right side of the status bar to expand fully</string>

	<string name="qs_footer_warnings_title">QS Panel Warnings</string>
	<string name="qs_footer_warnings_summary">Hide QS Panel warnings such as VPN</string>

	<string name="less_boring_heads_up_title">Limit Heads Up Notifications</string>
	<string name="less_boring_heads_up_summary">Only show heads up notifications for calls and texts</string>

	<string name="network_traffic_state_title">Network Traffic</string>
	<string name="network_traffic_state_summary">Show network traffic in the status bar</string>

	<string name="network_traffic_autohide_threshold_title">Auto Hide Traffic Icon Threshold</string>

	<string name="wake_when_plugged_or_unplugged_title">Wake Up When Disconnecting or Connecting USB</string>

	<string name="heads_up_notifications_enabled_title">Heads Up Notifications</string>

</resources>
