<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 Invictrix ROM

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

	<Preference android:key="statusbar_icons"
		android:title="@string/statusbar_icons_title">

		<intent android:targetPackage="com.android.systemui"
			android:targetClass="com.android.systemui.tuner.StatusBarIconsTunerActivity" />
	</Preference>

	<com.android.settings.preferences.SystemSettingSwitchPreference
		android:key="double_tap_sleep_gesture"
		android:title="@string/statusbar_dt2s_title"
		android:summary="@string/statusbar_dt2s_summary"
		android:defaultValue="true" />

	<com.android.settings.preferences.SystemSettingSwitchPreference
		android:key="status_bar_quick_qs_pulldown"
		android:title="@string/statusbar_quick_pulldown_title"
		android:summary="@string/statusbar_quick_pulldown_summary"
		android:defaultValue="false" />

	<com.android.settings.preferences.SystemSettingSwitchPreference
		android:key="network_traffic_state"
		android:title="@string/network_traffic_state_title"
		android:summary="@string/network_traffic_state_summary"
		android:defaultValue="false" />

	<com.android.settings.preferences.CustomSeekBarPreference
		android:key="network_traffic_autohide_threshold"
		android:title="@string/network_traffic_autohide_threshold_title"
		android:max="1024"
		settings:min="0"
		settings:units="kb/s" />

</PreferenceScreen>
